--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "pages": [
     "pages/index/index",
     "pages/index2/index",
+    "pages/index3/index",
     "pages/logs/logs"
   ],
   "window": {
@@ -20,6 +21,10 @@
       {
         "pagePath": "pages/index2/index",
         "text": "tab2"
+      },
+      {
+        "pagePath": "pages/index3/index",
+        "text": "tab3"
       }
     ]
   }
